# GFX-A2

./: .gitmodules  CMakeCache.txt  CMakeLists.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
include/project/: microfacet.hpp  tracer.hpp
src/: main.cpp
src/shaders/: f_shader.metal  fragmentShader.frag  v_shader.metal  v_shader.vert  vertexShader.vert
